# sycamore-test

./: Cargo.toml  README.md  index.html  package-lock.json  publish-to-pages.sh
docs/: index.html  sickamore-18454b9cd8397f5_bg.wasm  sickamore-246f7ec86c0ea345.js  sickamore-246f7ec86c0ea345_bg.wasm  sickamore-2aa7c3d0148dc9f.js  sickamore-2aa7c3d0148dc9f_bg.wasm  sickamore-2acd67b1f9e853a7_bg.wasm  sickamore-43fae4386ff16859_bg.wasm  sickamore-44aa521238de3b92.js  sickamore-44aa521238de3b92_bg.wasm  sickamore-479a8e2e63d415d0_bg.wasm  sickamore-536043dd61e97192.js  sickamore-53990bac14a7dd67_bg.wasm  sickamore-569418aceafb1ff0_bg.wasm  sickamore-59a00e673b8fd90f_bg.wasm  sickamore-5f7304416656a12d.js  sickamore-663f261274bef850.js  sickamore-663f261274bef850_bg.wasm  sickamore-6696b500f66686ae.js  sickamore-692e8f80b9ec7c86_bg.wasm  sickamore-6a15e6bce6c958ab.js  sickamore-6c0ec3f287f8b19.js  sickamore-6c0ec3f287f8b19_bg.wasm  sickamore-710544b16f5cb5bf.js  sickamore-710544b16f5cb5bf_bg.wasm  sickamore-7b3c6d577548f4f.js  sickamore-7b3c6d577548f4f_bg.wasm  sickamore-8081f3ae920d52c6.js  sickamore-8cd12e0f1ef82bf7_bg.wasm  sickamore-8e25a99212eaba2b.js  sickamore-8e25a99212eaba2b_bg.wasm  sickamore-9a0d707313e1165d_bg.wasm  sickamore-9a9871c900c22743.js  sickamore-9a9871c900c22743_bg.wasm  sickamore-a3dd9d1045800527_bg.wasm  sickamore-aa639dd9e13288ca.js  sickamore-b1b68ac81c69a728.js  sickamore-baea6449d34ba7c3.js  sickamore-c197f2ffa718d2bf_bg.wasm  sickamore-c9ca1797871931d9.js  (+17 more)
src/: card.rs  db.rs  groceries.rs  main.rs  nav.rs  recipes.rs  sidebar.rs
