[package]
name = "sickamore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sycamore = "0.9.0-beta.1"
uuid = { version = "1.3.3", features = ["serde", "v4"]}
web-sys = { version = "0.3.63", features = ["HtmlInputElement", "KeyboardEvent"]}

